[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/dialogs/UpdateDialog.gd" type="Script" id=1]

[node name="UpdateDialog" type="PopupDialog"]
margin_right = 395.0
margin_bottom = 209.0
input_pass_on_modal_close_click = false
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 473.0
margin_bottom = 55.0
text = "DIALOG_UPDATE_TITLE"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 59.0
margin_right = 473.0
margin_bottom = 79.0
custom_constants/separation = 20

[node name="Body" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 83.0
margin_right = 473.0
margin_bottom = 141.0
size_flags_vertical = 3
theme_type_variation = "Text"
bbcode_enabled = true
fit_content_height = true

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 145.0
margin_right = 473.0
margin_bottom = 155.0
rect_min_size = Vector2( 0, 10 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 159.0
margin_right = 473.0
margin_bottom = 209.0
rect_pivot_offset = Vector2( -258, 63 )
custom_constants/separation = 20
alignment = 1

[node name="OkButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 309.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
text = "DIALOG_UPDATE_BTN_OK"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 329.0
margin_right = 473.0
margin_bottom = 50.0
rect_min_size = Vector2( 80, 50 )
text = "BTN_CLOSE"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
body_size_limit = 20000
timeout = 10.0

[connection signal="meta_clicked" from="VBoxContainer/Body" to="." method="_on_Body_meta_clicked"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
